--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -3,7 +3,7 @@ branch-defaults:
     environment: null
     group_suffix: null
   master:
-    environment: null
+    environment: WeatherMonitoring
     group_suffix: null
 environment-defaults:
   WeatherMonitoring4:
