--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "WeatherMonitoring",
+  "name": "analysis",
   "private": true,
   "dependencies": {
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
+    "bootstrap": "^4.6.0",
+    "chart.js": "^2.9.4",
+    "chartkick": "^3.2.1",
+    "datatables.net-bs4": "^1.10.24",
+    "jquery": "^3.6.0",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.2"
   }
 }
