--- a/config/database.yml
+++ b/config/database.yml
@@ -89,6 +89,11 @@ test:
 #
 production:
   <<: *default
-  database: weather_monitor_production
-  username: analysis
-  password: <%= ENV['ANALYSIS_DATABASE_PASSWORD'] %>
+  adapter: postgresql
+  encoding: unicode
+  database: ebdb
+  username: ebroot
+  password: Ecen4032020
+  host: aa1ri14ytcgpqp6.c0zaocc0wkci.ca-central-1.rds.amazonaws.com
+  port: 5432
+  timeout: 5000
